--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "grunt-ts": "^6.0.0-beta.19",
     "grunt-tslint": "^5.0.1",
     "jasmine": "^3.1.0",
+    "ts-node": "^8.5.4",
     "tslint": "^5.9.1",
-    "typescript": "^2.8.1"
+    "typescript": "^2.9.2"
   },
   "devDependencies": {},
   "scripts": {
+    "start": "ts-node app.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "build-watch": "tsc --watch"
