--- a/package.json
+++ b/package.json
@@ -2,20 +2,24 @@
   "name": "typescript_dev",
   "version": "1.0.0",
   "description": "",
-  "main": "Gruntfile.js",
+  "main": "app.js",
   "dependencies": {
+    "express": "^4.17.1",
     "grunt": "^1.0.2",
     "grunt-cli": "^1.2.0",
     "grunt-ts": "^6.0.0-beta.19",
     "grunt-tslint": "^5.0.1",
     "jasmine": "^3.1.0",
+    "socket.io": "^2.3.0",
     "ts-node": "^8.5.4",
     "tslint": "^5.9.1",
-    "typescript": "^2.9.2"
+    "typescript": "^2.9.2",
+    "@types/express": "^4.17.2",
+    "@types/socket.io": "^2.1.4"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "ts-node app.ts",
+    "start": "ts-node ./src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "build-watch": "tsc --watch"
