--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "./src/app.ts",
   "dependencies": {
+    "@types/express": "^4.17.2",
+    "@types/node": "^13.9.3",
+    "@types/socket.io": "^2.1.4",
     "express": "^4.17.1",
     "grunt": "^1.0.2",
     "grunt-cli": "^1.2.0",
@@ -13,9 +16,7 @@
     "socket.io": "^2.3.0",
     "ts-node": "^8.5.4",
     "tslint": "^5.9.1",
-    "typescript": "^2.9.2",
-    "@types/express": "^4.17.2",
-    "@types/socket.io": "^2.1.4"
+    "typescript": "^2.9.2"
   },
   "devDependencies": {},
   "scripts": {
